--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>400</width>
-    <height>300</height>
+    <width>1224</width>
+    <height>836</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -20,7 +20,11 @@
       <property name="orientation">
        <enum>Qt::Horizontal</enum>
       </property>
-      <widget class="QTreeView" name="eventTree"/>
+      <widget class="QTreeView" name="eventTree">
+       <property name="frameShape">
+        <enum>QFrame::NoFrame</enum>
+       </property>
+      </widget>
       <widget class="QQuickWidget" name="photoView">
        <property name="resizeMode">
         <enum>QQuickWidget::SizeRootObjectToView</enum>
@@ -35,7 +39,7 @@
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>400</width>
+     <width>1224</width>
      <height>21</height>
     </rect>
    </property>
