Implement viewing events in a grid
I tried to make it look like Shotwell, but the rounded corners proved
cumbersome to implement in QML.

--- a/resources.qrc
+++ b/resources.qrc
@@ -2,6 +2,7 @@
     <qresource prefix="/">
         <file>BorderedImage.qml</file>
         <file>CenteredGridView.qml</file>
+        <file>EventView.qml</file>
         <file>Main.qml</file>
         <file>PhotoView.qml</file>
     </qresource>
