Make components of out repeatedly used types
The hack to center a gridview and the border around an image will be
reused for the upcoming EventView.

In addition, handle the case where the total amount of items in the view
is less than what there is space for. Now items will be centered always.

--- a/resources.qrc
+++ b/resources.qrc
@@ -1,5 +1,7 @@
 <RCC>
     <qresource prefix="/">
+        <file>BorderedImage.qml</file>
+        <file>CenteredGridView.qml</file>
         <file>Main.qml</file>
         <file>PhotoView.qml</file>
     </qresource>
