--- a/resources.qrc
+++ b/resources.qrc
@@ -3,6 +3,7 @@
         <file>BorderedImage.qml</file>
         <file>CenteredGridView.qml</file>
         <file>EventView.qml</file>
+        <file>FullScreenView.qml</file>
         <file>Main.qml</file>
         <file>PhotoView.qml</file>
     </qresource>
