--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -115,6 +115,19 @@
          </property>
          <item>
           <widget class="QTreeView" name="eventTree">
+           <property name="sizePolicy">
+            <sizepolicy hsizetype="Expanding" vsizetype="Fixed">
+             <horstretch>0</horstretch>
+             <verstretch>0</verstretch>
+            </sizepolicy>
+           </property>
+           <property name="frameShape">
+            <enum>QFrame::NoFrame</enum>
+           </property>
+          </widget>
+         </item>
+         <item>
+          <widget class="QTreeView" name="fileTree">
            <property name="frameShape">
             <enum>QFrame::NoFrame</enum>
            </property>
