Show ratings on photos
AS the constructor had to be changed, take the opportunity to remove the
unused cosntructor

--- a/resources.qrc
+++ b/resources.qrc
@@ -8,5 +8,6 @@
         <file>PhotoView.qml</file>
         <file>icons/one-event.png</file>
         <file>icons/one-tag.png</file>
+        <file>icons/one-star.svg</file>
     </qresource>
 </RCC>
