--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -156,7 +156,7 @@
         </layout>
        </widget>
       </widget>
-      <widget class="WorkaroundQuickWidget" name="photoView">
+      <widget class="QQuickWidget" name="photoView">
        <property name="resizeMode">
         <enum>QQuickWidget::SizeRootObjectToView</enum>
        </property>
@@ -250,11 +250,6 @@
    <class>QQuickWidget</class>
    <extends>QWidget</extends>
    <header>QtQuickWidgets/QQuickWidget</header>
-  </customwidget>
-  <customwidget>
-   <class>WorkaroundQuickWidget</class>
-   <extends>QQuickWidget</extends>
-   <header>workaroundquickwidget.h</header>
   </customwidget>
  </customwidgets>
  <resources/>
